# piclas-windows

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  NOT  README.md  REGGIE.md  buildTSI.bat  build_piclas_build-poisson-leapfrog-release.bat  piclas_builder.html
.claude/: settings.local.json
cmake/: SetBuildType.cmake  SetCompiler.cmake  SetGPU.cmake  SetLibraries.cmake  SetLinker.cmake  SetMachine.cmake  WindowsToolchain.cmake  mpi_f08.f90
src/: CMakeLists.txt  petsc_mpi_compat.h  piclas.f90  piclas.h  piclaslib.f90
src/analyze/: analyze.f90  analyze_hdg.f90  analyze_vars.f90  analyzefield.f90  analyzefield_hdg.f90  analyzefield_tools.f90
src/dg/: dg.f90
src/dielectric/: dielectric.f90
src/equations/discrete_velocity/: distfunc.f90
src/equations/maxwell/: equation.f90  riemann.f90
src/equations/poisson/: equation.f90
src/extrae/: extrae_module.f90
src/fv/: fv.f90
src/globals/: array_operations.f90  commandlinearguments.f90  glob_windows.c  globals.f90  globals_vars.f90  processmemusage.cxx  stacksize.c
src/gpu/: gpu_init.cu  gpu_interface.f90  gpu_loader.c  gpu_memory.cu  gpu_vars.f90  lserk_push.cu  msvc_stubs.c  particle_push.cu  patch_cuda_comdat.py  piclas_gpu.h
src/gradients/: gradients_metrics.f90
src/hdg/: elem_mat.f90  hdg.f90  hdg_fpc_cg.f90  hdg_init.f90  hdg_linear.f90  hdg_nonlinear.f90  hdg_petsc.f90  hdg_tools.f90  hdg_vars.f90  hdg_vars_petsc.f90
src/init/: piclas_init.f90
src/interpolation/: basis.f90  interpolation_vars.f90
src/io_hdf5/: hdf5_input.f90  hdf5_input_field.f90  hdf5_input_particle.f90  hdf5_output.f90  hdf5_output_field.f90  hdf5_output_field_maxwell.f90  hdf5_output_particle.f90  hdf5_output_particle_pic.f90  hdf5_output_state.f90  io_hdf5.f90
src/loadbalance/: loadbalance.f90  loadbalance_metrics.f90  loadbalance_timers.f90  loadbalance_vars.f90  loaddistribution.f90
src/mesh/: mesh.f90  mesh_pAdaption.f90  mesh_readin.f90  mesh_tools.f90  mesh_vars.f90  metrics.f90  prepare_mesh.f90
src/mortar/: fillmortar.f90
src/mpi/: mpi.f90  mpi_hdg.f90  mpi_shared.f90  mpi_shared_vars.f90  mpi_vars.f90
src/output/: output.f90  output_vtk.f90
src/particles/: particle_init.f90  particle_operations.f90  particle_rhs.f90  particle_tools.f90  particle_vMPF.f90  particle_vars.f90
src/particles/analyze/: particle_analyze.f90  particle_analyze_code.f90  particle_analyze_output.f90  particle_analyze_tools.f90  particle_analyze_vars.f90
src/particles/bgk/: bgk_adaptation.f90  bgk_colloperator.f90  bgk_main.f90  bgk_vars.f90
src/particles/boundary/: particle_boundary_condition.f90  particle_boundary_init.f90  particle_boundary_sampling.f90  particle_boundary_tools.f90  particle_boundary_vars.f90
src/particles/dsmc/: dsmc_ambipolardiff.f90  dsmc_analyze.f90  dsmc_bg_gas.f90  dsmc_chemical_reactions.f90  dsmc_collis_mode.f90  dsmc_collis_vec.f90  dsmc_electronic_model.f90  dsmc_init.f90  dsmc_main.f90  dsmc_particle_pairing.f90  dsmc_polyatomic_model.f90  dsmc_qk_procedures.f90  dsmc_relaxation.f90  dsmc_symmetry.f90  dsmc_vars.f90
src/particles/emission/: particle_br_electron_fluid.f90  particle_emission.f90  particle_emission_init.f90  particle_emission_tools.f90  particle_emission_vars.f90  particle_macroscopic_restart.f90  particle_photoionization.f90  particle_position_and_velocity.f90  particle_surface_flux.f90  particle_surface_flux_init.f90  particle_surface_flux_vars.f90
src/particles/fp_flow/: fpflow_colloperator.f90  fpflow_main.f90  fpflow_vars.f90
src/particles/mcc/: mcc.f90  mcc_init.f90  mcc_xsec.f90
src/particles/particle_mesh/: particle_bgm.f90  particle_mesh.f90  particle_mesh_build.f90  particle_mesh_readin.f90  particle_mesh_tools.f90  particle_periodic_bc.f90  particle_surfaces_vars.f90
src/particles/particle_mpi/: particle_mpi.f90  particle_mpi_emission.f90  particle_mpi_halo.f90  particle_mpi_vars.f90
src/particles/pic/analyze/: pic_analyze.f90
src/particles/pic/deposition/: pic_depo.f90  pic_depo_hdg.f90  pic_depo_method.f90  pic_depo_mpi.f90  pic_depo_tools.f90  pic_depo_vars.f90
src/particles/pic/interpolation/: init_BGField.f90  pic_interpolation.f90  pic_interpolation_tools.f90  pic_interpolation_vars.f90
src/particles/pic/models/: pic_models.f90
src/particles/restart/: particle_readin.f90  particle_restart.f90
src/particles/sampling/: particle_sampling_adaptive.f90
src/particles/surfacemodel/: surfacemodel_SEE.f90  surfacemodel_analyze.f90  surfacemodel_analyze_vars.f90  surfacemodel_init.f90  surfacemodel_main.f90  surfacemodel_porous.f90  surfacemodel_tools.f90  surfacemodel_vars.f90
src/particles/tracking/: particle_intersection.f90  particle_tracking_vars.f90
src/posti/dmd/: CMakeLists.txt  dmd.f90  dmd_vars.f90
src/posti/dmd/maxwell/: equationDmd.f90
src/posti/piclas2vtk/: piclas2vtk.f90  piclas2vtk_vars.f90
src/posti/superB/: CMakeLists.txt  superB.f90  superB_coil.f90  superB_init.f90  superB_main.f90  superB_softiron.f90  superB_tools.f90  superB_vars.f90
src/radiation/radiation_solver/: exportspectrum.f90  radiation_atoms.f90  radiation_continuum.f90  radiation_excitation.f90  radiation_init.f90  radiation_instrbroadening.f90  radiation_molecules.f90  radiation_vars.f90
src/radiation/radiative_transfer/: radtrans_init.f90  radtrans_output.f90
src/radiation/radiative_transfer/tracking/: radtrans_tracking.f90  radtrans_tracking_output.f90
src/radiation/ray_tracing/: raytrace.f90  raytrace_ini.f90  raytrace_vars.f90
src/readintools/: readintools.f90  stringtools.f90
src/recordpoints/: recordpoints.f90
src/restart/: restart.f90  restart_field.f90
src/timedisc/: timedisc.f90  timedisc_TimeStepByLSERK.f90  timedisc_TimeStepPoisson.f90  timedisc_TimeStepPoissonByBorisLeapfrog.f90  timedisc_TimeStepPoissonByLSERK.f90  timedisc_TimeStep_DSMC.f90  timedisc_vars.f90
src/utils/: utils.f90
tools/: TOOLS.md  cmake-builds-ini.sh  convertHoprToPyHopeIni.sh  find-todos-in-git-repository.sh
unitTests/: CMakeLists.txt  MortarBasis.f90
windows-tools/: bugG_linux_valgrind_investigation.md  (+7 more)
(+91 files in other folders)
